Alterações com melhorias e ajustes